# resume-analyzer-101

./: .gitignore  LICENSE  README.md  dummy.py  main.py  pyproject.toml  requirements.txt  utils.py
