[project]
name = "resume-analyzer-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
